--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # basic options
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: A wonderful site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Yuanyuan Tian's Home Page
+author: Yuanyuan Tian
+#email: your-email@domain.com
+#description: A wonderful site
+#twitter_username: jekyllrb
+#github_username:  jekyll
 
 # Build settings
 markdown: kramdown
