--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # basic options
 title: Yuanyuan Tian's Home Page
 author: Yuanyuan Tian
-email: [firstname][dot][initial of last name]@gmail.com
+email: yuanyuan.t@gmail.com
 #description: A wonderful site
 #twitter_username: jekyllrb
 #github_username:  jekyll
