--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # basic options
 title: Yuanyuan Tian's Home Page
 author: Yuanyuan Tian
-email: yuanyuan.t@gmail.com
-#description: A wonderful site
+#email: yuanyuan.t@gmail.com
+description: The home page of Dr. Yuanyuan Tian
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
